Bug 167872 - Amarok 2 Alpha crashed on exit
Summary: Amarok 2 Alpha crashed on exit
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-alpha
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-31 18:05 UTC by Tim Cussins
Modified: 2008-08-02 10:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Cussins 2008-07-31 18:05:19 UTC
Version:           1.86 (using KDE 4.1.0)
Installed from:    Ubuntu Packages
OS:                Linux

Played mp3 file fine, although no sound card. Closed app and it crashed.

Application: Amarok (amarok), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb3dad740 (LWP 9278)]
[New Thread 0xa9a90b90 (LWP 9306)]
[New Thread 0xaa291b90 (LWP 9305)]
[New Thread 0xaf25eb90 (LWP 9287)]
[New Thread 0xb09f0b90 (LWP 9285)]
[New Thread 0xb01efb90 (LWP 9283)]
[KCrash handler]
#6  0xb76ff34a in qt_qFindChild_helper (parent=0x848fa00, name=@0xbf84a058, 
    mo=@0xb77e1004) at kernel/qobject.cpp:1834
#7  0xb7e5945e in qFindChild<QTimer*> (o=0x848fa00, name=@0xbf84a058)
    at /usr/include/qt4/QtCore/qobject.h:400
#8  0xb7e55a61 in startTimer (timeout=2000, receiver=0x848fa00, 
    slot=0xb7f96623 "1hideMainProgressBar()")
    at /build/buildd/amarok-kde4-1.86/src/statusbar/StatusBarBase.cpp:75
#9  0xb7e5683b in KDE::StatusBar::endProgressOperation (this=0x848fa00, 
    owner=0x84f0c30)
    at /build/buildd/amarok-kde4-1.86/src/statusbar/StatusBarBase.cpp:475
#10 0xb0a0f70f in ~XmlParseJob (this=0x84f0c30)
    at /build/buildd/amarok-kde4-1.86/src/collection/sqlcollection/ScanManager.cpp:370
#11 0xb76fae3c in QObjectPrivate::deleteChildren (this=0x8211458)
    at kernel/qobject.cpp:1869
#12 0xb7702b42 in ~QObject (this=0x820e038) at kernel/qobject.cpp:871
#13 0xb0a117ba in ~ScanManager (this=0x820e038)
    at /build/buildd/amarok-kde4-1.86/src/collection/sqlcollection/ScanManager.h:36
#14 0xb76fae3c in QObjectPrivate::deleteChildren (this=0x8211840)
    at kernel/qobject.cpp:1869
#15 0xb7702b42 in ~QObject (this=0x8214c00) at kernel/qobject.cpp:871
#16 0xb7e90b6e in ~Collection (this=0x8214c00)
    at /build/buildd/amarok-kde4-1.86/src/collection/Collection.cpp:62
#17 0xb0a1a537 in ~SqlCollection (this=0x8214c00)
    at /build/buildd/amarok-kde4-1.86/src/collection/sqlcollection/SqlCollection.cpp:80
#18 0xb0a39545 in ~SqliteCollection (this=0x8214c00)
    at /build/buildd/amarok-kde4-1.86/src/collection/sqlcollection/SqliteCollection.cpp:93
#19 0xb7e93ad6 in qDeleteAll<QList<Collection*>::const_iterator> (
    begin=@0xbf84a29c, end=@0xbf84a298)
    at /usr/include/qt4/QtCore/qalgorithms.h:352
#20 0xb7e93b45 in qDeleteAll<QList<Collection*> > (c=@0x820d248)
    at /usr/include/qt4/QtCore/qalgorithms.h:360
#21 0xb7e920f2 in ~CollectionManager (this=0x820d1d0)
    at /build/buildd/amarok-kde4-1.86/src/collection/CollectionManager.cpp:93
#22 0xb7e952ed in ~CollectionManagerSingleton (this=0x820d1d0)
    at /build/buildd/amarok-kde4-1.86/src/collection/CollectionManager.cpp:63
#23 0xb7e9218d in destroy ()
    at /build/buildd/amarok-kde4-1.86/src/collection/CollectionManager.cpp:68
#24 0xb76ebda4 in qt_call_post_routines () at kernel/qcoreapplication.cpp:164
#25 0xb6dbf208 in ~QApplication (this=0xbf84a478)
    at kernel/qapplication.cpp:945
#26 0xb7b7c58f in ~KApplication (this=0xbf84a478)
    at /build/buildd/kde4libs-4.1.0/kdeui/kernel/kapplication.cpp:944
#27 0xb7b83b08 in ~KUniqueApplication (this=0xbf84a478)
    at /build/buildd/kde4libs-4.1.0/kdeui/kernel/kuniqueapplication.cpp:374
#28 0xb7edcb95 in ~App (this=0xbf84a478)
    at /build/buildd/amarok-kde4-1.86/src/App.cpp:245
#29 0x0804b200 in main (argc=1, argv=0xbf84a944)
    at /build/buildd/amarok-kde4-1.86/src/main.cpp:126
#0  0xb7fd3410 in __kernel_vsyscall ()
Comment 1 Mark Kretschmann 2008-08-02 10:23:26 UTC
SVN commit 840921 by markey:

Fix another crash on exit situation: The collection scanner must be stopped before the GUI is destroyed.

BUG: 167872


 M  +2 -0      MainWindow.cpp  
 M  +2 -1      collection/Collection.h  
 M  +9 -0      collection/CollectionManager.cpp  
 M  +1 -0      collection/CollectionManager.h  
 M  +11 -2     collection/sqlcollection/SqlCollection.cpp  
 M  +1 -0      collection/sqlcollection/SqlCollection.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=840921