Fix another crash on exit situation: The collection scanner must be stopped before the GUI is destroyed.

BUG: 167872

svn path=/trunk/extragear/multimedia/amarok/; revision=840921