src/MainWindow.cpp
@@ -127,6 +127,8 @@ MainWindow::~MainWindow()
     config.writeEntry( "MainWindow Size", size() );
     config.writeEntry( "MainWindow Position", pos() );
 
+    CollectionManager::instance()->stopScan();
+
     delete m_playlistFiles;
     delete m_contextView;
     delete m_corona;
