src/collection/Collection.h
@@ -64,8 +64,9 @@ class AMAROK_EXPORT Collection : public QObject, public TrackProvider
         virtual ~Collection();
 
         virtual QueryMaker * queryMaker() = 0;
-        virtual void startFullScan() { }
+        virtual void startFullScan() {}
         virtual void startIncrementalScan() {}
+        virtual void stopScan() {};
 
         virtual QString collectionId() const = 0;
         virtual QString prettyName() const = 0;
